# x.infer

./: .pre-commit-config.yaml  404.html  README.md  example.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: docs-build.yml  docs.yml  installation.yml  macos.yml  ubuntu.yml  windows.yml
InferX/: __init__.py  index.html  model_factory.py  model_registry.py
InferX/transformers/: blip2.py
changelog/: index.html
common/: index.html
contributing/: contributing.md  index.html
docs/: InferX.md  common.md  index.md  installation.md  usage.md  xinfer.md
docs/examples/: quickstart.ipynb  quickstart.md
examples/intro/: index.html
examples/quickstart/: index.html
faq/: index.html
installation/: index.html
nbs/: demo.ipynb  example.ipynb  florence-2.ipynb  gradio.ipynb  gradio_demo.ipynb  joycaption.ipynb  llama.ipynb  ollama.ipynb  phi35.ipynb  query.py  query_moondream.ipynb  quickstart.ipynb  qwen2vl.ipynb  serve_and_query.ipynb  serve_moondream.py  serve_xinfer.py  serving.ipynb  smolvlm.ipynb  testing-segmentation.ipynb  testing_results.ipynb  timm.ipynb  transformers.ipynb  vllm.ipynb  yolo.ipynb
nbs/ultralytics_models/: testing-detection.ipynb  testing-pose-estimation.ipynb  testing-segmentation.ipynb
search/: search_index.json
tests/: __init__.py  debug.ipynb  test_InferX.py  test_base_model.py  test_serve_model.py  test_xinfer.py
tests/smoke/: test_moondream.py  test_timm.py  test_ultralytics.py
usage/: index.html
xinfer/: __init__.py  base_model.py  core.py  index.html  model_factory.py  model_registry.py  models.py  serve.py  types.py  viz.py  xinfer.md
xinfer/ollama/: llava_phi3.py
xinfer/timm/: __init__.py  eva02.py  list_models.py  timm_model.py
xinfer/transformers/: __init__.py  auto.py  blip2.py  florence2.py  joycaption.py  llama32.py  moondream.py  qwen2_vl.py  smolvlm.py  transformers_model.py  vision2seq.py
xinfer/ultralytics/: __init__.py  ultralytics_model.py  yolov11.py  yolov8.py
xinfer/vllm/: molmo.py  phi35vision.py
