[project]
name = "xinfer"
version = "0.3.1"
description = "Framework agnostic computer vision inference. Run 1000+ models by changing only one line of code. Supports models from transformers, timm, ultralytics, vllm, ollama and your custom model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru",
    "rich>=13.9.4,<14",
    "requests>=2.32.3,<3",
    "pillow>=10.4.0,<11",
    "ray[serve]>=2.38.0,<3",
    "fastapi>=0.115.5,<0.116",
    "timm>=1.0.11,<2",
    "gradio",
    "itables>=2.2.3,<3",
]
keywords = ["xinfer"]
license = { text = "Apache Software License 2.0" }
authors = [{ name = "Dickson Neoh", email = "dickson.neoh@gmail.com" }]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."console_scripts"]
xinfer = "xinfer.cli:main"

[project.optional-dependencies]
timm = ["timm"]
ultralytics = ["ultralytics"]
transformers = ["transformers", "accelerate"]
vllm = ["vllm"]
ollama = ["ollama"]
all = ["timm", "ultralytics", "transformers", "vllm", "ollama", "accelerate"]
[tool.setuptools.packages.find]
include = ["xinfer*"]
exclude = ["docs*"]

[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.3.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "xinfer/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = ["docs"]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/dnth/xinfer"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
xinfer = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytorch = ">=2.2.0,<3"
python = "3.11.*"
torchvision = ">=0.19.1,<0.20"
